--- a/src/pages/posts/nik.mdx
+++ b/src/pages/posts/nik.mdx
@@ -5,5 +5,6 @@ date: 2020-11-12
 author: jac
 tags:
   - dev
+  - nik
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/AEAEthWA6hc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
