--- a/src/pages/posts/photolab2.mdx
+++ b/src/pages/posts/photolab2.mdx
@@ -5,5 +5,6 @@ date: 2020-11-12
 author: jac
 tags:
   - dev
+  - photolab
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BvnST_kU9bc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
