Update Posts “apruzzese”

--- a/src/pages/posts/apruzzese.mdx
+++ b/src/pages/posts/apruzzese.mdx
@@ -9,9 +9,4 @@ tags:
   - lumiere
   - fuji
 ---
-import YouTube from "react-youtube";
-
-<p>
-  <YouTube videoId={"e54W7j2rW2k"} containerClassName={"youtube-container"} />
-</p>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e54W7j2rW2k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
