--- a/src/pages/posts/sheedy.mdx
+++ b/src/pages/posts/sheedy.mdx
@@ -4,6 +4,6 @@ title: "Deborah Sheedy "
 date: 2020-11-12
 author: jac
 tags:
-  - photographe
+  - portrait
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/glPtDmTfeN4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
