Update Posts “nbstreet”

--- a/src/pages/posts/nbstreet.mdx
+++ b/src/pages/posts/nbstreet.mdx
@@ -7,3 +7,9 @@ tags:
   - photo_rue
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3CiLTW2wg-Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## 10 Street Photography Tips - The Photography Show 2020
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tA_yrLr_1DQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
