Update Posts “nbstreet”

--- a/src/pages/posts/nbstreet.mdx
+++ b/src/pages/posts/nbstreet.mdx
@@ -5,6 +5,7 @@ date: 2020-11-13
 author: jac
 tags:
   - photo_rue
+  - dev
 ---
 <iframe width="560" height="315" src="https://www.youtube.com/embed/3CiLTW2wg-Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
