Update Posts “compo”

--- a/src/pages/posts/compo.mdx
+++ b/src/pages/posts/compo.mdx
@@ -1,6 +1,6 @@
 ---
 slug: compo
-title: "Photography Composition :: Simplification and Negative Space"
+title: "Photography Composition : Simplification and Negative Space"
 date: 2020-12-05
 author: jac
 tags:
