Update Posts “pose_cafe_3”

--- a/src/pages/posts/pose_cafe_3.mdx
+++ b/src/pages/posts/pose_cafe_3.mdx
@@ -1,6 +1,6 @@
 ---
 slug: pose_cafe_3
-title: "Culture photographique : Ansel Adams"
+title: "Culture photographique : Cheme Mados"
 date: 2021-03-21
 author: jac
 tags:
