--- a/src/pages/posts/pose_cafe_3.mdx
+++ b/src/pages/posts/pose_cafe_3.mdx
@@ -1,10 +1,12 @@
 ---
-slug: pose_cafe_3
-title: "Culture photographique : Cheme Mados"
+slug: posecafe3
+title: "Culture photographique : Chema Mados"
 date: 2021-03-21
 author: jac
 tags:
   - photographe
   - culture
 ---
+***Le Génie surréaliste***
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SjLZINodW9M?start=23" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
