Update Posts “pose_cafe_2”

--- a/src/pages/posts/pose_cafe_2.mdx
+++ b/src/pages/posts/pose_cafe_2.mdx
@@ -1,10 +1,12 @@
 ---
-slug: posecafe2
-title: "Culture photographique : Ansel Adams"
+slug: posecafe7
+title: "Culture photographique : Fan Ho"
 date: 2021-03-21
 author: jac
 tags:
   - photographe
   - culture
 ---
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UEqBOsbsxpI?start=26" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+***L'art de la composition en Noir et Blanc***
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/KqwaIl3hOI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
